--- a/gb/18/6/1/n10447668.md
+++ b/gb/18/6/1/n10447668.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>凌晓辉：共产主义毁灭人类的宣言书（上）</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/06/757f29eb5fde8963fcd4ac810d70e309-600x400.jpg" />
 <h6>虽然大多数自由世界正在被有关川金会的新闻报导所淹没，但朝鲜人却两眼一抹黑，对这个历史性峰会知之甚少。(Chung Sung-Jun/Getty Images)
 </h6>
 <hr>
-<p>【大纪元2018年06月01日讯】</p>
+	<p>【大纪元2018年06月01日讯】</p>
 <h2>引言</h2>
-<p>自有人类以来，从未有过任何一篇文章、一本书、即使是一篇讨伐檄文，曾经像<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E3%80%8A%E5%85%B1%E4%BA%A7%E5%85%9A%E5%AE%A3%E8%A8%80%E3%80%8B.md#1">《共产党宣言》</a>一样，对人类、对社会和世间的一切，以及对人类所有历代祖先、对宗教、直至对人类各自敬仰的神、佛和上帝会有如此滔天的“仇”和“恨” <ahref="#_ftn1" name="_ftnref1">[1]</a>。</p>
-<p>自有人类以来，也从未有过任何一篇文字，曾经像<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E3%80%8A%E5%85%B1%E4%BA%A7%E5%85%9A%E5%AE%A3%E8%A8%80%E3%80%8B.md#1">《共产党宣言》</a>一样，会号召一定要用“暴力”来毁灭现存世界的一切。</p>
+<p>自有人类以来，从未有过任何一篇文章、一本书、即使是一篇讨伐檄文，曾经像<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E3%80%8A%E5%85%B1%E4%BA%A7%E5%85%9A%E5%AE%A3%E8%A8%80%E3%80%8B.md#1">《共产党宣言》</a>一样，对人类、对社会和世间的一切，以及对人类所有历代祖先、对宗教、直至对人类各自敬仰的神、佛和上帝会有如此滔天的“仇”和“恨” <ahref="#_ftn1" name="_ftnref1">[1]</a>。</p>
+<p>自有人类以来，也从未有过任何一篇文字，曾经像<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E3%80%8A%E5%85%B1%E4%BA%A7%E5%85%9A%E5%AE%A3%E8%A8%80%E3%80%8B.md#1">《共产党宣言》</a>一样，会号召一定要用“暴力”来毁灭现存世界的一切。</p>
 <p>自有人类以来，更是从未有过任何人像马克思恩格斯一样，用如此仇恨、欺骗、煽动、迷惑的词藻欲将整个世界推入你死我活的斗争深渊。</p>
 <p>一篇不到两万字的《共产党宣言》，从发表到现在刚好一百七十年，却给当今世界造成了一亿多人的非正常死亡。我们把标点符号全都算上，其每个字就杀害了超过五千无辜人的性命。而且这些无辜的人往往都是社会的精英、虔诚的宗教信徒、人类社会道德的遵守者和维护者……。</p>
-<p>这字字血泪所反应的还仅仅只是表面对人类的杀戮，其深层的危害更是由于《共产党宣言》曾经建立起来的共产国际，使毒害人类的范围覆盖了世界五分之二的人口；所掀起的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>运动波及到了世界的各个角落，并不断的蚕食着整个世界。</p>
-<p><ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>邪恶幽灵阴险、狡诈，并且毫不间断的、有组织、有计划、有步骤地将人类推向毁灭的深渊。首先是将人与神和祖先的联系斩断；再进一步就是泯灭人类的良知和本性；最终使人都成为没有道德，只剩有欲望的异类而自我毁灭。</p>
+<p>这字字血泪所反应的还仅仅只是表面对人类的杀戮，其深层的危害更是由于《共产党宣言》曾经建立起来的共产国际，使毒害人类的范围覆盖了世界五分之二的人口；所掀起的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>运动波及到了世界的各个角落，并不断的蚕食着整个世界。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89.md#1">共产主义</a>邪恶幽灵阴险、狡诈，并且毫不间断的、有组织、有计划、有步骤地将人类推向毁灭的深渊。首先是将人与神和祖先的联系斩断；再进一步就是泯灭人类的良知和本性；最终使人都成为没有道德，只剩有欲望的异类而自我毁灭。</p>
 <p>人们通常知道神所默示的《圣经》、《佛经》、还有老子的《道德经》等等，传给人类的不同民族和不同人种的“普世价值”会救度迷中的世人。可是共产主义反其道而行之，否定一切人的行为规范和普世价值。 《共产党宣言》通篇贯穿的就是“恨” <ahref="#_ftn2" name="_ftnref2">[2]</a>，表面上以解救劳苦大众为幌子，利用社会底层民众容易被欺骗的弱点，无端挑起一切可以挑起的人间“仇恨”，继而又鼓动以各种“暴力”去满足这种“恨”的需求，搅得共产主义所到之处民不聊生，人民无不生活在贫穷、苦难和恐惧之中。</p>
 <p>所有这一切都十分清楚的告诉人们：共产主义是一个邪恶的幽灵、撒旦和魔鬼。正如《共产主义的终极目的》一书所阐述的：“这个幽灵是在另外空间中由“恨”和宇宙低层各种败物构成的邪灵。它原本是一条蛇，到了表层空间的体现形式则是一条红龙。它与仇视正神、正义的撒旦为伍。这个邪灵的目的就是要毁灭人类，在神归来挽救众生的最后关头，让人不信神，让人的道德败坏到已经听不懂神的教诲而最终被淘汰，元神被永远销毁。” <ahref="#_ftn3" name="_ftnref3">[3]</a></p>
 <p>整个一百多年来血雨腥风的共产主义运动史充分证明：《共产党宣言》就是一篇毁灭整个人类的宣言书。</p>
@@ -27,63 +27,62 @@
 <p>东方关于幽灵的思想和中国大抵相似：人死后，灵魂会进入阴间，因为种种原因滞留在阳间（人间）的怨灵，可能会戕害人类。<ahref="#_ftn6" name="_ftnref6">[6]</a></p>
 <p>而在欧洲游荡的幽灵既不是人死后滞留在阳间害人的“鬼怪”，也不是“怨灵”。它是高层空间被神打下来的“败物”。传说中“鬼怪”和“怨灵”大多会因在凡间的不公、冤屈和仇而生“恨”，这种“恨”是因仇而生，如同我们讲的“仇恨”；而由宇宙败物聚集起来的黑暗势力中的“恨”，不是指“仇恨”，这种“恨”是无缘无故的、欲将一切都毁灭殆尽的、对神和宇宙万物的“恨”，也就是共产主义的“恨”。</p>
 <p>《宣言》中可以看出，共产主义根本就不是什么理论和学说，没有任何逻辑性，就是强盗土匪；不但违背人间各种“道”和“法”，而且都是反其道而行之。用粗俗一点的话讲就是：它蛮狠不讲道理，鼓励社会上的无奈打砸抢烧杀……，要干尽一切坏事。实际上它是有组织、有计划、有目的、系统性进行的要将一切毁灭掉。就是那毁灭人类的幽灵。</p>
-<p>但是它又宣布共产党是唯物主义的<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E2%80%9C%E6%97%A0%E7%A5%9E%E8%AE%BA%E2%80%9D.md#1">“无神论”</a>者。那所谓的“无神论”者声称：除了看得见摸得着的东西外、其它的都不相信，说得好听的会讲：我只相信科学，科学以外的东西我都不相信。实际上它一直盗用人类文化和科学来表现自己，同时又毁灭人类的文化。</p>
-<p>共产主义讲的唯物主义<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E2%80%9C%E6%97%A0%E7%A5%9E%E8%AE%BA%E2%80%9D.md#1">“无神论”</a>也不是普遍意义上讲的，一般讲的“无神论”是指有些人对于科学本身的认识并不透彻，对于科学还没有认识到的某些客观现象，看不见的东西不相信，或他没看到的就不相信，比如对气功高潮中出现的许多特异功能现象，或东西方的某些神话和传说等等。</p>
+<p>但是它又宣布共产党是唯物主义的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E2%80%9C%E6%97%A0%E7%A5%9E%E8%AE%BA%E2%80%9D.md#1">“无神论”</a>者。那所谓的“无神论”者声称：除了看得见摸得着的东西外、其它的都不相信，说得好听的会讲：我只相信科学，科学以外的东西我都不相信。实际上它一直盗用人类文化和科学来表现自己，同时又毁灭人类的文化。</p>
+<p>共产主义讲的唯物主义<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E2%80%9C%E6%97%A0%E7%A5%9E%E8%AE%BA%E2%80%9D.md#1">“无神论”</a>也不是普遍意义上讲的，一般讲的“无神论”是指有些人对于科学本身的认识并不透彻，对于科学还没有认识到的某些客观现象，看不见的东西不相信，或他没看到的就不相信，比如对气功高潮中出现的许多特异功能现象，或东西方的某些神话和传说等等。</p>
 <p>仲维光先生在《谈尼采、叔本华及爱因斯坦思想》一文中关于认识论问题时谈到了对中国影响巨大的马克思的唯物主义。他认为：“认识论及方法论问题是一切学术、一切知识的根本问题。这当然也包括人们所关心的政治思想问题。</p>
 <p>这个认识论问题探究的结果肯定会牢牢地把唯物主义排除在学术研究的领域之外，因为唯物主义是一种货真价实的意识形态，一种观念论。而任何推崇启蒙思想的人，推崇近代自由主义思想的人，如果忽视认识论问题，不对黑格尔和马克思主义提出质疑，拒斥意识形态、观念论，那才是非常奇怪的事情。”<ahref="#_ftn7" name="_ftnref7">[7]</a></p>
 <p>他在谈到哲学史中认为：“在这里我要再次进一步强调的是，谁若是只知道唯物主义和唯心主义，并以此来谈论哲学史，那么就根本是南辕北辙的胡扯。因为唯物主义是一种观念论、一种意识形态，以这样一种教条系统来理解、解释哲学史，那不是哲学史而是一种僵硬的、意识形态化的断言，一种让人哭笑不得的贴标签。如果再加上历史唯物主义的判断，那就更是一种对于真实历史事实的粗暴干涉及扭曲。为此，我要强调的是：对於哲学的历史，也就是philosophy的历史，真正在历史中存在的对於哲学问题的探索和唯物主义和唯心主义的对立毫无关系，这就是说，和马克思论断的恰好相反，全部哲学史和唯物唯心的对立毫无关系！<ahref="#_ftn8" name="_ftnref8">[8]</a></p>
-<p>其实，共产邪灵它本身就是神打下来的“幽灵”，它讲的唯物主义“无神论”并不是真正意义上的“无神”，否则共产邪灵从始至终就不会将其革命“领袖”一一都搬上神坛，让共产主义信徒顶礼膜拜、并且从未间断过的直到如今。邪灵宣扬的唯物主义无神论是迫使其信徒抛弃创造自己的神，和延绵自己民族的历代祖先。为的是使得对人类各自生命中“神性”的觉醒产生障碍，这种“神性”是神造人时就根植在人的生命之中的，为的是当人类遇到大难，当神来救人时，人的“神性”能够被神唤醒，从而使人得救。共产主义的“无神论”是要泯灭人的“神性”，当人的“神性”被泯灭到连创世主都无法唤醒时，就只有走向毁灭。同时这种唯物主义“无神论”又有效的掩盖了<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89%E5%B9%BD%E7%81%B5.md#1">共产主义幽灵</a>的邪恶本质。（未完待续）</p>
+<p>其实，共产邪灵它本身就是神打下来的“幽灵”，它讲的唯物主义“无神论”并不是真正意义上的“无神”，否则共产邪灵从始至终就不会将其革命“领袖”一一都搬上神坛，让共产主义信徒顶礼膜拜、并且从未间断过的直到如今。邪灵宣扬的唯物主义无神论是迫使其信徒抛弃创造自己的神，和延绵自己民族的历代祖先。为的是使得对人类各自生命中“神性”的觉醒产生障碍，这种“神性”是神造人时就根植在人的生命之中的，为的是当人类遇到大难，当神来救人时，人的“神性”能够被神唤醒，从而使人得救。共产主义的“无神论”是要泯灭人的“神性”，当人的“神性”被泯灭到连创世主都无法唤醒时，就只有走向毁灭。同时这种唯物主义“无神论”又有效的掩盖了<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%85%B1%E4%BA%A7%E4%B8%BB%E4%B9%89%E5%B9%BD%E7%81%B5.md#1">共产主义幽灵</a>的邪恶本质。（未完待续）</p>
 <p>参考资料：</p>
-<p><ahref="#_ftnref1" name="_ftn1">[1]</a> ?《九评》编辑部：《共产主义的终极目的》序言https://github.com/tjvrql262/djy/blob/master/gb/17/11/21/n9876205.md#1</p>
-<p><ahref="#_ftnref2" name="_ftn2">[2]</a> ?《九评》编辑部：《共产主义的终极目的》序言https://github.com/tjvrql262/djy/blob/master/gb/17/11/21/n9876205.md#1</p>
-<p><ahref="#_ftnref3" name="_ftn3">[3]</a> ?《九评》编辑部：《共产主义的终极目的》(2) https://github.com/tjvrql262/djy/blob/master/gb/17/11/21/n9876205.md#1</p>
+<p><ahref="#_ftnref1" name="_ftn1">[1]</a> ?《九评》编辑部：《共产主义的终极目的》序言https://github.com/hxcaik307/djy/blob/master/gb/17/11/21/n9876205.md#1</p>
+<p><ahref="#_ftnref2" name="_ftn2">[2]</a> ?《九评》编辑部：《共产主义的终极目的》序言https://github.com/hxcaik307/djy/blob/master/gb/17/11/21/n9876205.md#1</p>
+<p><ahref="#_ftnref3" name="_ftn3">[3]</a> ?《九评》编辑部：《共产主义的终极目的》(2) https://github.com/hxcaik307/djy/blob/master/gb/17/11/21/n9876205.md#1</p>
 <p><ahref="#_ftnref4" name="_ftn4">[4]</a>恩格斯,《1888年英文版序言》</p>
 <p><ahref="#_ftnref5" name="_ftn5">[5]</a> ?见《耶稣传》</p>
 <p><ahref="#_ftnref6" name="_ftn6">[6]</a> ?https://zh.wikipedia.org/zh-cn/幽灵</p>
-<p><ahref="#_ftnref7" name="_ftn7">[7]</a>仲维光：《<ahref="https://github.com/tjvrql262/djy/blob/master/gb/18/4/2/n10271905.md#1">谈尼采、叔本华及爱因斯坦思想</a>》，大纪元。</p>
-<p><ahref="#_ftnref8" name="_ftn8">[8]</a>仲维光：《<ahref="https://github.com/tjvrql262/djy/blob/master/gb/18/4/2/n10271905.md#1">谈尼采、叔本华及爱因斯坦思想</a>》，大纪元。</p>
+<p><ahref="#_ftnref7" name="_ftn7">[7]</a>仲维光：《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/18/4/2/n10271905.md#1">谈尼采、叔本华及爱因斯坦思想</a>》，大纪元。</p>
+<p><ahref="#_ftnref8" name="_ftn8">[8]</a>仲维光：《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/18/4/2/n10271905.md#1">谈尼采、叔本华及爱因斯坦思想</a>》，大纪元。</p>
 <p>责任编辑：张宪义</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/5/31/n10444576.md#1">魔鬼在统治着我们的世界(12)：政治篇(上)</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/5/31/n10443634.md#1">中共称“证实中华五千年文明” 舆论哗然</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/7/28/n2978870.md#1">鲜为人知的马克思之八：魔性的马克思</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/7/10/n2962346.md#1">鲜为人知的马克思之一：专制的马克思</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/10/11/7/n3077476.md#1">【史实】卡尔·马克思的成魔之路</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/2/21/n10161210.md#1">周晓辉：马克思口中“污秽之书”中共再宣扬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/7/10/n2962346.md#1">鲜为人知的马克思之一：专制的马克思</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/7/28/n2978870.md#1">鲜为人知的马克思之八：魔性的马克思</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md#1">【史实】卡尔·马克思的成魔之路</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/2/21/n10161210.md#1">周晓辉：马克思口中“污秽之书”中共再宣扬</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/24/n11208799.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇（5）</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/23/n11403596.md#1" target="_blank">澳纽正义之声汇入全球反迫害之洪势</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/2/n11629364.md#1" target="_blank">139号囚犯——红色影星赵丹的凄惨人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/2/26/n2443847.md#1" target="_blank">《中共弄巧成拙》(1):天安门自焚伪案</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
-<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/6/1/n10447668.htm">凌晓辉：共产主义毁灭人类的宣言书（上）</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/6/1/n10447668.htm">凌晓辉：共产主义毁灭人类的宣言书（上）</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/18/6/1/n10447668.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/18/6/1/n10447668.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
